# FDesktopEnvironment

./: .gitignore  README.md  config.ini  meson.build  meson_options.txt
include/: meson.build
include/fde/: compositor.h  config.h  dbus.h  plugin-system.h
include/fde/common/: log.h
include/fde/comp/: compositor.h  container.h  output.h  socket.h  workspace.h
include/fde/compositor/: compositor.h  scene_graph.h  transaction.h
include/fde/compositor/tree/: root.h  workspace.h
include/fde/input/: cursor.h  input-manager.h  seat.h
include/fde/util/: log.h
include/fde/utils/: cli.h  config_helpers.h  log.h
notes/: 3д в качестве обоев рабочего стола.md  Seatop (Обработка ввода).md  Вывод, рендер и компоненты сцены.md  Основные концепции разработки.md  План разработки.md
plugins/: meson.build
protocols/: idle.xml  wlr-output-power-management-unstable-v1.xml
scripts/: build_plugins.sh  build_project.sh
src/: compositor.c  config.c  main.c  meson.build  plugin-system.c  test-plugin.c
src/compositor/: compositor.c  output.c  socket.c  workspace.c
src/dbus/: config.c  core.c  dbus.c  org.fde.Compositor.xml  plugin-system.c  plugins.c
src/input/: cursor.c  input-manager.c  seat.c
src/plugins/: plugin-system.c
src/util/: log.c
src/utils/: cli.c  log.c
subprojects/: wlroots.wrap
